Fix query & edit btn misalignment

--- a/frontend/src/components/TabbedResults.less
+++ b/frontend/src/components/TabbedResults.less
@@ -32,6 +32,10 @@
     .query-row {
         margin-bottom: 2em;
 
+        .query-text, .edit-query {
+            line-height: 16px;
+        }
+
         .query-text {
             white-space: pre;
             font-family: @monospace-font;
@@ -40,14 +44,14 @@
             max-width: 85%;
             overflow: auto;
         }
-    }
 
-    button.edit-query {
-        width: auto;
-        float: left;
-        padding-top: 0px;
-        margin-left: 1ex;
-        border-top: 0px;
+        .edit-query {
+            width: auto;
+            float: left;
+            padding-top: 0px;
+            margin-left: 1ex;
+            border-top: 0px;
+        }
     }
 
     button.reload {
